[project]
name = "libragrian"
version = "0.1.0"
description = "A small library for RAG utilities"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
